<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    android:background="@null"
    android:id="@+id/dialog">
    <LinearLayout 
	    android:id="@+id/clock_days"
	    style="@style/heightWrap"
	    android:orientation="horizontal"
	    android:layout_gravity="center"
	    >
	    <TextView 
	        style="@style/doubleWrap"
	        android:padding="10dip"
	        android:textStyle="bold"
	        android:text="@string/clock_days"/>
	    <LinearLayout
	        style="@style/heightWrap"
	        android:gravity="right" 
	        >
	        <TextView
	            android:id="@+id/clock_days_tv" 
	           style="@style/doubleWrap"
	        	android:padding="10dip"
	        	/>
	    </LinearLayout>
    </LinearLayout>
	<View
   		android:layout_width="fill_parent"
    	android:layout_height="1dp"
    	android:paddingLeft="10dp"
    	android:paddingRight="10dp"
   		android:background="?android:attr/listDivider"
	/>
	<LinearLayout
        style="@style/heightWrap"
        android:id="@+id/clock_minutes"
	    android:orientation="horizontal"
	    android:layout_gravity="center"
	    >
	    <TextView 
	        style="@style/doubleWrap"
	        android:padding="10dip"
	        android:textStyle="bold"
	        android:text="@string/clock_minutes"/>
	    <LinearLayout
	        style="@style/heightWrap"
	        android:gravity="right" 
	        >
	        <TextView
	            android:id="@+id/clock_minutes_tv" 
	            style="@style/doubleWrap"
	        	android:padding="10dip"
	        	/>
	    </LinearLayout>
    </LinearLayout>
    <View
   		android:layout_width="fill_parent"
    	android:layout_height="1dp"
    	android:paddingLeft="10dp"
    	android:paddingRight="10dp"
   		android:background="?android:attr/listDivider"
	/>
	<LinearLayout 
        android:id="@+id/clock_alert_terminal"
	    style="@style/heightWrap"
	    android:orientation="horizontal"
	    android:layout_gravity="center"
	    >
	    <TextView 
	        style="@style/doubleWrap"
	        android:padding="10dip"
	        android:textStyle="bold"
	        android:text="@string/clock_alert_interval"/>
	    <LinearLayout
	        style="@style/heightWrap"
	        android:gravity="right" 
	        >
	        <TextView
	            android:id="@+id/clock_alert_terminal_tv" 
	            style="@style/doubleWrap"
	            android:text="@string/clock_none"
	        	android:padding="10dip"
	        	/>
	    </LinearLayout>
    </LinearLayout>
    <View  
   		android:layout_width="fill_parent"
    	android:layout_height="1dp"
    	android:paddingLeft="10dp"
    	android:paddingRight="10dp"
   		android:background="?android:attr/listDivider"
	/> 
	<LinearLayout 
        android:id="@+id/clock_alert_times"
	    style="@style/heightWrap"
	    android:orientation="horizontal"
	    android:layout_gravity="center"
	    >
	    <TextView 
	        style="@style/doubleWrap"
	        android:padding="10dip"
	        android:textStyle="bold"
	        android:text="@string/clock_alert_times"/>
	    <LinearLayout
	        style="@style/heightWrap"
	        android:gravity="right" 
	        >
	        <TextView
	            android:id="@+id/clock_alert_times_tv"
	            style="@style/doubleWrap"
	            android:text="@string/clock_none"
	        	android:padding="10dip"
	        	/>
	    </LinearLayout>
    </LinearLayout>
</LinearLayout>